Fix some layout issues

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,8 @@
 @use "base";
 
+$small-mobile: 430px;
+$desktop: 768px;
+
 .slide-wrapper {
   min-height: 100vh;
   width: 100%;
@@ -8,15 +11,19 @@
   justify-content: center;
   padding: 1rem;
   background: url("../../images/pattern-curve.svg") left bottom no-repeat;
-  background-size: contain;
+  background-size: 40%;
 
   .slide-container {
     height: 100%;
     width: 100%;
     display: block;
     margin: 0 auto;
-    max-width: 850px;
+    max-width: 960px;
     position: relative;
+
+    @media (min-width: 850px) {
+      max-width: 860px;
+    }
 
     .slide {
       width: 100%;
@@ -28,6 +35,11 @@
       color: base.$dark-blue;
       text-align: center;
 
+      @media (min-width: 850px) {
+        flex-direction: row;
+        text-align: start;
+      }
+
       > :first-child {
         display: inherit;
         align-items: center;
@@ -36,16 +48,32 @@
         background: url("../../images/pattern-quotes.svg") top center no-repeat;
         background-size: 5rem;
         margin-block: 1.5rem;
-        padding: 1.5rem;
-        gap: 1.5rem;
-        line-height: 1;
+        padding: 2rem;
+        gap: 1.8rem;
+        font-size: 1.5rem;
+        line-height: 1.2;
+
+        @media (min-width: 850px) {
+          background-position: 20% top;
+          background-size: 4.2rem;
+          align-items: flex-start;
+          margin: -1rem;
+        }
+
+        > :first-child {
+          padding: 0;
+        }
 
         > :nth-child(2) {
-          font-size: 20px;
+          font-size: 1rem;
           display: flex;
           gap: 0.5rem;
           font-weight: base.$font-bold;
           flex-direction: column;
+
+          @media (min-width: 850px) {
+            flex-direction: row;
+          }
 
           > :nth-child(2) {
             color: base.$grayish-blue;
@@ -58,15 +86,33 @@
         width: 100%;
         height: 100%;
         margin: 0 auto;
-        padding: 2.5rem;
+        padding: 3rem;
         background: url("../../images/pattern-bg.svg") center no-repeat;
         background-size: contain;
+
+        @media (min-width: 850px) {
+          padding: 4rem;
+          margin-left: -12rem;
+          z-index: -1;
+        }
+
+        @media (max-width: 430px) {
+          padding: 2rem;
+        }
 
         > img {
           height: 100%;
           width: 20rem;
           border-radius: 0.5rem;
           filter: drop-shadow(0 0.1rem 0.5rem base.$grayish-blue);
+
+          @media (min-width: 850px) {
+            width: 25.5rem;
+          }
+
+          @media (max-width: 430px) {
+            width: 15rem;
+          }
         }
       }
     }
@@ -77,14 +123,24 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 22rem;
-  width: 6rem;
+  top: 27rem;
+  width: 5rem;
   height: 2.5rem;
   border-radius: 2rem;
   z-index: 1;
   overflow: hidden;
   background-color: white;
   filter: drop-shadow(0.1rem 0.1rem 0.7rem base.$grayish-blue);
+
+  @media (min-width: 850px) {
+    top: 36.4rem;
+    transform: translate(-24rem);
+    left: calc(100% - 25.5rem);
+  }
+
+  @media (max-width: 430px) {
+    top: 21.6rem;
+  }
 
   :hover {
     cursor: pointer;
@@ -118,29 +174,5 @@
     right: 0;
     background: url("../../images/icon-next.svg") no-repeat center;
     background-size: auto;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  .slide {
-    flex-direction: row;
-    text-align: left;
-  }
-  .slide-text {
-    background-position: 10% top;
-    background-size: 100px;
-    align-items: flex-start;
-  }
-  .slide-img {
-    margin-left: -100px;
-    z-index: -1;
-  }
-  .slide-img img {
-    width: 400px;
-  }
-  .buttons {
-    top: 415px;
-    transform: translate(0);
-    left: calc(100% - 400px);
   }
 }
